<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2052AB"
    tools:context="com.example.kritisharma.sih2018.aswhat">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aswhat"
        android:textSize="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:textColor="#FFFFFF"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/govtoff"
        android:id="@+id/goff"

        android:layout_gravity="center_horizontal"
       />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:id="@+id/user"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/employer"
        android:id="@+id/emp"
        android:layout_gravity="center_horizontal"
        />


</LinearLayout>
